# editor

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_PLAN.md  README.md  package.json  perry.config.ts  tsconfig.json
core/: index.ts
core/buffer/: line-index.ts  piece-table.ts  rope.ts  text-buffer.ts
core/commands/: clipboard.ts  editing.ts  multicursor.ts  navigation.ts  registry.ts  selection-cmds.ts
core/cursor/: cursor-manager.ts  selection.ts  word-boundary.ts
core/dap-client/: client.ts  protocol.ts
core/diff/: diff-compute.ts  diff-model.ts  hunk.ts  inline-diff.ts
core/document/: document.ts  edit-builder.ts  encoding.ts
core/folding/: fold-provider.ts  fold-state.ts
core/history/: operation.ts  undo-manager.ts
core/lsp-client/: capabilities.ts  client.ts  protocol.ts  transport.ts
core/search/: incremental.ts  replace.ts  search-engine.ts
core/tokenizer/: incremental.ts  syntax-engine.ts  token-theme.ts
core/tokenizer/grammars/: cpp.ts  css.ts  html.ts  json.ts  markdown.ts  python.ts  rust.ts  typescript.ts
core/viewport/: line-height.ts  scroll.ts  viewport-manager.ts
examples/diff-viewer/: main.ts  perry.config.ts
examples/markdown-editor/: main.ts  perry.config.ts
examples/minimal/: main.ts  perry.config.ts
native/: ffi-bridge.ts  index.ts  render-coordinator.ts  touch-input.ts  word-wrap.ts
native/android/: Cargo.toml  run-demo.sh
native/android/examples/demo-app/: .gitignore  settings.gradle.kts
native/android/examples/demo-app/app/: build.gradle.kts
native/android/examples/demo-app/app/src/main/: AndroidManifest.xml
native/android/examples/demo-app/app/src/main/java/com/honeide/demo/: HoneEditorView.kt  MainActivity.kt  NativeLib.kt
native/android/examples/demo-app/app/src/main/res/values/: styles.xml
native/android/src/: demo_jni.rs  editor_view.rs  input_handler.rs  lib.rs
native/ios/: Cargo.toml  run-demo.sh
native/ios/examples/: demo_editor_ios.rs
native/ios/src/: editor_view.rs  lib.rs  text_renderer.rs  touch_handler.rs  view.rs
native/linux/: Cargo.toml
native/linux/examples/: demo_editor.rs
native/linux/src/: compositor.rs  editor_view.rs  lib.rs  text_renderer.rs  widget.rs
native/macos/: Cargo.toml  README.md
native/macos/examples/: demo_editor.rs  demo_window.rs
native/macos/src/: editor_view.rs  layer_manager.rs  lib.rs  metal_blitter.rs  text_renderer.rs  view.rs
native/web/: Cargo.toml  run-demo.sh
native/web/examples/demo-app/: index.html
native/web/src/: dom_renderer.rs  editor_view.rs  lib.rs  selection_overlay.rs
native/windows/: Cargo.toml
native/windows/examples/: demo_editor.rs
native/windows/src/: compositor.rs  editor_view.rs  input_handler.rs  lib.rs  text_renderer.rs
tests/: buffer.test.ts  cursor.test.ts  dap.test.ts  diff.test.ts  editor-vm.test.ts  folding.test.ts  lsp.test.ts  native.test.ts  search.test.ts  syntax.test.ts  undo.test.ts  viewport.test.ts
tests/benchmarks/: keystroke-latency.ts  large-file-open.ts  scroll-perf.ts
view-model/: cursor-state.ts  decorations.ts  diff-view-model.ts  editor-view-model.ts  find-widget.ts  ghost-text.ts  gutter.ts  line-layout.ts  minimap.ts  overlays.ts  theme.ts
