[package]
name = "hone-editor-android"
version = "0.1.0"
edition = "2021"
description = "Android native rendering for Hone Editor (Canvas/Skia via JNI)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
