[package]
name = "hone-editor-ios"
version = "0.1.0"
edition = "2021"
description = "iOS native rendering for Hone Editor (Core Text + UIKit)"

[lib]
crate-type = ["staticlib"]

[dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
core-text = "20.1"
objc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
