[package]
name = "hone-editor-linux"
version = "0.1.0"
edition = "2021"
description = "Linux native rendering for Hone Editor (Pango + Cairo)"

[lib]
crate-type = ["staticlib"]

[dependencies]
pango = "0.18"
pangocairo = "0.18"
cairo-rs = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
