[package]
name = "hone-editor-macos"
version = "0.1.0"
edition = "2021"
description = "macOS native rendering for Hone Editor (Core Text + Metal)"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
core-text = "20.1"
cocoa = "0.25"
objc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[[example]]
name = "demo_editor"

[[example]]
name = "demo_window"
