[package]
name = "hone-editor-web"
version = "0.1.0"
edition = "2021"
description = "Web native rendering for Hone Editor (DOM + WASM)"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlSpanElement",
    "CssStyleDeclaration",
    "Node",
    "Window",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
