[package]
name = "hone-editor-windows"
version = "0.1.0"
edition = "2021"
description = "Windows native rendering for Hone Editor (DirectWrite + Direct2D)"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Foundation_Numerics",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_Globalization",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[[example]]
name = "demo_editor"
